Bug 1097625 - Fallback to use LANG variable as dictionary doesn't work. r=ehsan